added my code with comments

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <h2>Details</h2>
             </div>
             <div id="details-img-container">
-                <img src="https://cdn.ndtv.com/tech/images/gadgets/pikachu_hi_pokemon.jpg" alt="Image of selected pokémon" />
+                <img src="https://cdn.ndtv.com/tech/images/gadgets/pikachu_hi_pokemon.jpg" alt="Image of selected Pokémon" />
             </div>
             <div id="details-text">
                 <div id="details-name">Name: Pikachu</div>
@@ -39,9 +39,10 @@
                 <h3>Base Attributes</h3>
                 <div>Hit Points: 35</div>
                 <div>Attack: 55</div>
-                <div>Defense: 40</div>
+                <div>Defense: 40</div>  
             </div>
             <div id="details-action">
+                <!-- button that's not in a form -->
                 <button>Add -></button>
             </div>
         </div>
