changed evolutions to versions, added recent

--- a/index.html
+++ b/index.html
@@ -66,8 +66,12 @@
             <div>Attack Points Total: 130</div>
             <div>Defense Points Total: 60</div>
         </div>
-        <div id="evolution">Evolution</div>
-        <div id="recent">Recent</div>
+        <div id="versions">
+            <h3>Versions</h3>
+        </div>
+        <div id="recent">
+            <h3>Recent</h3>
+        </div>
     </div>
     <div id="current-pokemon"></div>
 </body>
