--- a/index.html
+++ b/index.html
@@ -68,9 +68,24 @@
         </div>
         <div id="versions">
             <h3>Versions</h3>
+            <div id="versions-list">
+                <div class="versions-list-items">
+                    <img src="https://static.pokemonpets.com/images/monsters-images-800-800/26-Raichu.webp" alt="Evolution version image" />
+                    <div>Raichu</div>
+                </div>
+                <div class="versions-list-items">
+                    <img src="https://static.pokemonpets.com/images/monsters-images-800-800/26-Raichu.webp" alt="Evolution version image" />
+                    <div>Raichu</div>
+                </div>
+                <div class="versions-list-items">
+                    <img src="https://static.pokemonpets.com/images/monsters-images-800-800/26-Raichu.webp" alt="Evolution version image" />
+                    <div>Raichu</div>
+                </div>
+            </div>
         </div>
         <div id="recent">
             <h3>Recent</h3>
+
         </div>
     </div>
     <div id="current-pokemon"></div>
