--- a/index.html
+++ b/index.html
@@ -73,19 +73,29 @@
                     <img src="https://static.pokemonpets.com/images/monsters-images-800-800/26-Raichu.webp" alt="Evolution version image" />
                     <div>Raichu</div>
                 </div>
-                <div class="versions-list-items">
-                    <img src="https://static.pokemonpets.com/images/monsters-images-800-800/26-Raichu.webp" alt="Evolution version image" />
-                    <div>Raichu</div>
-                </div>
-                <div class="versions-list-items">
-                    <img src="https://static.pokemonpets.com/images/monsters-images-800-800/26-Raichu.webp" alt="Evolution version image" />
-                    <div>Raichu</div>
-                </div>
             </div>
         </div>
         <div id="recent">
             <h3>Recent</h3>
-
+            <!-- copy same format from `versions-list` -->
+            <div id="recent-list">
+                <div class="recent-list-items">
+                    <img src="https://static.pokemonpets.com/images/monsters-images-800-800/147-Dratini.webp" alt="Evolution version image" />
+                    <div>Dratini</div>
+                </div>
+                <div class="recent-list-items">
+                    <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/133.png" alt="Evolution version image" />
+                    <div>Eevee</div>
+                </div>
+                <div class="recent-list-items">
+                    <img src="https://cdn2.bulbagarden.net/upload/thumb/c/c6/094Gengar.png/250px-094Gengar.png" alt="Evolution version image" />
+                    <div>Gengar</div>
+                </div>
+                <div class="recent-list-items">
+                    <img src="https://cdn.ndtv.com/tech/images/gadgets/pikachu_hi_pokemon.jpg" alt="Evolution version image" />
+                    <div>Pikachu</div>
+                </div>
+            </div>
         </div>
     </div>
     <div id="current-pokemon"></div>
