--- a/index.html
+++ b/index.html
@@ -24,27 +24,7 @@
             <input type="submit" value="Go" />
         </form>
         <div id="details">
-            <div id="details-title">
-                <h2>Details</h2>
-            </div>
-            <div id="details-img-container">
-                <img src="https://cdn.ndtv.com/tech/images/gadgets/pikachu_hi_pokemon.jpg" alt="Image of selected Pokémon" />
-            </div>
-            <div id="details-text">
-                <div id="details-name">Name: Pikachu</div>
-                <div id="details-species">Species: Pikachu</div>
-                <div id="details-type">Type: Electric</div>
-            </div>
-            <div id="details-sub-text">
-                <h3>Base Attributes</h3>
-                <div>Hit Points: 35</div>
-                <div>Attack: 55</div>
-                <div>Defense: 40</div>  
-            </div>
-            <div id="details-action">
-                <!-- button that's not in a form -->
-                <button>Add -></button>
-            </div>
+            <div>No Pokemon Selected</div>
         </div>
         <div id="team">
             <h3>Team</h3>
@@ -62,9 +42,10 @@
                     <span>Dratini</span>
                 </li>
             </ul>
-            <div>Health Points Total: 105</div>
-            <div>Attack Points Total: 130</div>
-            <div>Defense Points Total: 60</div>
+            <h4>Team Statistics</h4>
+            <div>Health Points: 105</div>
+            <div>Attack: 130</div>
+            <div>Defense: 60</div>
         </div>
         <div id="versions">
             <h3>Versions</h3>
