moved add to team button to Team section. Started creating event listener for Add to Team button

--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
             <div>No Pokemon Selected</div>
         </div>
         <div id="team">
+            <!-- add button above team -->
+            <div id="add-to-team">
+                <!-- button that's not in a form -->
+                <button>Add To Team</button>
+            </div>
             <h3>Team</h3>
             <ul id="team-list">
                 <li>
@@ -47,7 +52,7 @@
             <div>Attack: 130</div>
             <div>Defense: 60</div>
         </div>
-        <div id="versions">
+        <!-- <div id="versions">
             <h3>Versions</h3>
             <div id="versions-list">
                 <div class="versions-list-items">
@@ -55,7 +60,7 @@
                     <div>Raichu</div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <div id="recent">
             <h3>Recent</h3>
             <!-- copy same format from `versions-list` -->
