updated capitalization to be same as gregs code

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
         </div>
         <div id="team">
             <span id="add-to-team">
-                <button>Add To Team</button>
+                <button>Add to Team</button>
             </span>
             <span id="clear-team">
                 <button>Clear Team</button>
             </span>
             <h3>Team</h3>
             <ul id="team-list">
-                <li id="team-list-placeholder">No pokémon currently in team</li>
+                <li id="team-list-placeholder">No Pokémon currently in team</li>
             </ul>
             <div id="team-stats">
                 <h4>Team Statistics</h4>
