--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         </div>
         <div id="evolutions">
             <h3>Evolutions</h3>
-            <!-- <div id="evolutions-list">
-                <div class="evolutions-list-item">
+            <div id="evolutions-list">
+                <!-- <div class="evolutions-list-item">
                     <img src="https://static.pokemonpets.com/images/monsters-images-800-800/26-Raichu.webp" alt="Evolution version image" />
                     <div>Raichu</div>
                 </div> -->
