--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         </div>
         <form id="pokemon-selector">
             <div id="error-message"></div>
+            <input id="filter-select" placeholder="Enter text to filter pokemon" />
             <select id="pokemon-select" name="pokemon-select">
                 <option value="default">--Choose your Pokemon--</option>
             </select>
