--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 </head>
 <body>
     <div id="main">
-        <div id="header">
-            <h1>Poké Teams</h1>
-        </div>
+        <h1 id="header">
+        </h1>
         <form id="pokemon-selector">
             <div id="error-message"></div>
             <input id="filter-select" placeholder="Enter text to filter pokemon" />
